# files-to-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE.md  SECURITY.md  cliff.toml  docker-compose.dev.yml  docker-compose.yml  process-compose.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: deployment.md  migration-from-self-update.md
docs/superpowers/plans/: 2026-04-28-bot-rename-and-cleanup-buttons.md  2026-04-28-phase-1-image-publishing.md  2026-04-28-phase-2-versioning-discipline.md  2026-04-28-phase-3-remove-self-update.md  2026-04-28-phase-4-oss-polish.md  2026-04-28-restart-command.md  2026-04-28-slash-menu-fix.md  2026-04-28-uv-path-fix.md
scripts/: files-to-agent-update-host.service  update-host.sh
skills/files-to-agent/: SKILL.md
src/files_to_agent/: __main__.py  config.py  core.py  db.py  lifecycle.py  logging_filter.py  messages.py  models.py  runner.py  storage.py  updater.py  version.py
src/files_to_agent/bot/: app.py  auth.py  format.py  handlers.py  (+1 more)
tests/: conftest.py  test_bot_handlers.py  test_config.py  test_core_chat_settings.py  test_core_context.py  test_core_lifecycle.py  test_core_queries.py  test_core_rename.py  test_core_usage.py  test_db.py  test_logging_filter.py  test_messages.py  test_models.py  test_resolver.py  test_runner.py  test_runner_slash_menu.py  test_storage.py  test_version.py  test_version_updater.py
update-flag/: .gitkeep
(+2 files in other folders)
