[project]
name = "files-to-agent"
version = "0.1.0"
description = "Telegram-side file staging bot with HTTP resolver for AI agents"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Samuel Gudi" }]
dependencies = [
    "python-telegram-bot>=21.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
files-to-agent = "files_to_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/files_to_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
